[gd_scene load_steps=7 format=2]

[ext_resource path="res://ScoreBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Dark_ring.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Augment"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "augmentMultiplierCallback"
} ]
}

[node name="ScoreBar" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="LightRing" type="Node2D" parent="."]

[node name="ContCont" type="Node2D" parent="."]
position = Vector2( -2, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="ContCont"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -35.0
margin_right = 25.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ContCont/VBoxContainer"]
margin_right = 50.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MulNum" type="Label" parent="ContCont/VBoxContainer"]
margin_top = 19.0
margin_right = 50.0
margin_bottom = 70.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "x 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Augment = SubResource( 2 )

[node name="FlyOff" type="Tween" parent="."]
[connection signal="tween_all_completed" from="FlyOff" to="." method="_on_FlyOff_tween_all_completed"]
